--- a/docs/01-理念概述.md
+++ b/docs/01-理念概述.md
@@ -1,67 +1,77 @@
-# 01 · 理念概述：三维治理 · 四级隔离 · 五项自治
-> 
-> > 三维治理 · 四级隔离 · 五项自治 —— 面向 Windows 平台的 AI 本地开发环境理念设计
+# 01 · 理念概述：三维治理、四级隔离、五项自治
+
+> 本文档是对 Python 多版本环境治理体系的核心理念总结，旨在帮助开发者在 Windows 平台上构建**可控、可复现、可迁移**的本地开发环境。
 
 ---
 
-## 一、背景问题
+## 🎯 背景与目标
 
-在 Windows 上构建 AI 开发环境常面临：
+在多项目、多版本并存的开发实践中，我们常常面临如下困扰：
 
-- Python 多版本冲突
-- Conda 与 venv 混用混乱
-- Docker 镜像与卷路径失控
-- 构建工具链无标准、难以复现
-- 项目迁移与教学部署难以复制
+- Python 安装路径混乱，工具链冲突；
+- 不同项目依赖版本不一致，环境不可复现；
+- 构建工具（如 poetry、uv 等）全局污染，版本难控；
+- 项目迁移到新设备后运行失败，重复配置耗时费力。
 
----
-
-## 二、核心理念
-
-### 🧠 三维治理模型
-
-1. **路径治理**  
-   规范系统路径、环境路径、项目路径，避免污染 C 盘。
-
-2. **构建治理**  
-   工具链随项目本地化安装，避免全局依赖干扰。
-
-3. **调度治理**  
-   协调 WSL、Docker、Conda、venv 的职责边界与互通策略。
+为此，我们设计出一套**治理理念驱动的本地环境架构方案**，以 Anaconda 多版本环境为基础，逐层隔离构建工具与项目环境，确保开发体验稳定、一致、透明。
 
 ---
 
-### 🔒 四级隔离结构
+## 🧠 三维治理架构
 
-1. **系统层**：Windows 系统盘与开发数据盘分离
-2. **虚拟层**：WSL 子系统安装在专用分区
-3. **容器层**：Docker 镜像与挂载卷迁移至自定义路径
-4. **Python 层**：Conda 多版本 Python + 项目级 `.venv` 独立隔离
+围绕开发生命周期中「路径定位 → 工具使用 → 项目运行」三大核心场景，提出三维治理原则：
 
----
-
-### ⚙️ 五项自治原则
-
-1. **路径独立**：所有环境组件具备固定路径、可重建
-2. **版本封装**：环境与工具版本随项目显式标注
-3. **工具随项目**：构建工具如 poetry/uv/hatch 内置于项目
-4. **权限最小**：普通用户权限即可搭建所有结构
-5. **可迁移复现**：一套配置可在不同机器上复现部署
+| 维度       | 目标                             | 实践方式                                             |
+|------------|----------------------------------|------------------------------------------------------|
+| 路径治理   | 消除系统污染，路径统一可控       | 所有环境集中于自定义路径（如 `D:\Conda`）           |
+| 构建治理   | 工具链解耦，依赖封装独立         | 工具链安装于 Conda 环境，仅用于构建，非项目运行依赖 |
+| 调度治理   | 环境切换明确，职责清晰分工       | Conda 控制 Python 主版本，`.venv` 提供项目本地环境  |
 
 ---
 
-## 三、实践应用场景
+## 🧱 四级隔离机制
 
-- 教学场景中分发统一开发环境模板
-- 跨团队开发中的项目环境标准化
-- 本地离线训练环境构建与迁移
-- 多版本 Python 模型开发与测试共存
+以 Conda 多版本环境为基础，构建逐层递进的隔离体系，防止交叉污染与冲突：
+
+| 隔离级别 | 描述                                    |
+|----------|---------------------------------------|
+| 一级隔离 | 安装路径隔离：使用 `D:\Conda` 而非系统盘            |
+| 二级隔离 | 版本环境隔离：为每个主版本创建独立 Conda 环境            |
+| 三级隔离 | 构建工具隔离：工具链（poetry/uv/hatch）安装在对应版本环境内 |
+| 四级隔离 | 项目环境隔离：每个项目使用 `.venv` 本地封装工具及依赖       |
+
+这种结构使得每一层都职责单一，彼此解耦，互不干扰。
 
 ---
 
-## 四、原始文档参考
+## 🔐 五项自治原则
 
-> 本理念最初由作者整理发布于 CSDN 博客：  
-> https://aicity.blog.csdn.net/article/details/149055334
+为进一步保障环境稳定与可迁移性，提出以下治理操作原则：
 
+1. **路径自治**：全路径可控，统一安装于指定位置（如 `D:\Conda`），远离系统盘。
+2. **版本自治**：每个 Python 主版本环境独立存在，便于切换与定位。
+3. **构建自治**：构建工具链随 Python 版本绑定，避免跨版本工具混用。
+4. **项目自治**：项目依赖完全封装于 `.venv` 中，克隆即可运行，无需全局配置。
+5. **迁移自治**：环境结构可压缩迁移，新设备导入即用，具备教学与分发价值。
 
+---
+
+## ✨ 架构优势回顾
+
+| 问题痛点            | 治理对策                                 |
+|---------------------|------------------------------------------|
+| 路径混乱            | 使用 D 盘路径短、权限明晰、集中管理        |
+| 版本冲突            | Conda 环境多版本隔离，互不干扰             |
+| 工具链污染          | 构建工具封装在 Conda 层，不影响项目运行     |
+| 项目不可复现        | `.venv` 本地依赖封装，便于迁移与部署        |
+| 教学部署复杂        | 统一模板结构，支持批量复制与自动化初始化     |
+
+---
+
+## 📚 参考文献
+
+- 原文链接：[Python 多版本环境治理理念驱动的系统架构设计](https://aicity.blog.csdn.net/article/details/149055334)
+
+---
+
+**治理不是约束，而是为了更高自由度的系统控制！**
