--- a/docs/02-路径结构规范.md
+++ b/docs/02-路径结构规范.md
@@ -1,168 +1,176 @@
-# 02 · 路径结构规范：统一的磁盘分区与存储架构
+# 02 · 路径结构规范：构建可控、统一的本地 Python 环境体系
 
-> 本章节旨在解决 AI 开发中最容易被忽略的问题 —— **路径混乱**。
-> 
-> 正确的路径规划，是实现环境可控、迁移复现、部署还原的基础。
+> 本文聚焦于 Windows 平台下，如何通过路径治理构建清晰、统一、可控的环境与项目目录结构，支持多版本 Python 管理、构建工具链隔离与项目迁移复现。
 
 ---
 
-## 📌 为什么要进行路径治理？
+## 🎯 为什么路径治理至关重要？
 
-在 AI 开发环境中，我们涉及多个系统组件：
+在传统开发环境中，路径混乱常导致以下问题：
 
-- Anaconda 多版本环境
-- WSL 子系统（如 Fedora）
-- Docker / Podman 镜像与卷
-- 项目代码与构建工具
-- 第三方模型文件、数据集
+- 系统盘污染、权限冲突、安装失败；
+- 默认路径层级过深，易触发 Windows 路径长度限制（260 字符）；
+- 环境分散在用户目录中，不利于迁移、备份与教学分发。
+- 特殊场景下可添加环境变量使用，为覆盖所有使用场景，环境变量路径长度应有预见性地尽量保持精简。
 
-这些组件的默认路径分散在：
-
-- `C:\Users\<用户名>\`
-- `C:\ProgramData\`
-- `C:\Users\<用户名>\AppData\Local`
-- `%LOCALAPPDATA%\Docker\wsl\data`
-- `%USERPROFILE%\anaconda3`
-
-**问题就来了：**
-
-- 系统盘空间告急，拖慢整个电脑性能；
-- 多系统组件彼此交叉，迁移困难；
-- 文件搜索、备份混乱，难以定位项目依赖；
-- 环境变量指向不清，容易造成 PATH 污染。
-
-> 所以，我们需要制定一套“结构清晰、层次分明”的路径规范。
+因此，建立**集中统一、路径简短、可读性强、易记易写**的环境路径结构，是治理的基础。
 
 ---
 
-## 📁 路径治理的五大原则
+## 🧭 推荐路径结构全览
 
-1. **系统盘只保系统**
-2. **环境组件分区隔离**
-3. **开发代码集中统一**
-4. **数据模型独立挂载**
-5. **可复现结构为目标**
+本治理方案采用如下统一路径规划：
 
----
+| 路径类型      | 推荐路径                                     | 说明                       |
+|-----------|------------------------------------------|--------------------------|
+| Conda 根路径（举例） | `D:\Conda`                               | Conda 主程序，仅保留核心组件        |
+| 环境根路径（举例）     | `D:\Conda\envs\py310` 或 `D:\PyEnv\py310` | 默认存放在 `envs` 目录下；或使用 `conda create -p` 自定义路径       |
+| 项目路径（举例）  | `I:\DevProjects\MyProj\`                 | 所有项目集中管理，便于版本控制与迁移       |
+| 虚拟环境（举例）  | `I:\DevProjects\MyProj\.venv`            | 项目自包含 `.venv`，与 Conda 解耦 |
 
-## 🧱 推荐的路径结构示意
+> ✅ 推荐做法：Conda 环境不再存于 `D:\Conda\envs\` 下，而是统一迁移至 `D:\PyEnv\`，结构更清晰，路径更短，减少冲突。
+## 📁 实际结构示例
 
-假设我们将项目主目录放在 `I:\` 盘（可根据个人情况替换为其他非系统盘）：
-
+### 1. 使用 `D:\Conda\envs\`（默认路径）
 ```text
+D:\
+├── Conda\                      ← Conda 主程序安装路径（不放环境）
+    └── envs\                      ← 所有 Conda 版本环境集中管理
+        ├── py38\
+        ├── py310\
+        └── py312\
+
 I:\
-│
-├── WSL\                     ← 所有 WSL 子系统根目录（通过 wsl.exe --import 导入）
-│   └── Fedora-41\
-│
-├── Conda\                   ← Conda 主环境与多版本 Python 管理
-│   ├── base\
-│   ├── python38\
-│   ├── python39\
-│   └── ...
-│
-├── Docker\                 ← Docker Desktop 镜像与卷迁移目标目录
-│   ├── data-root\
-│   └── volumes\
-│
-├── DevProjects\            ← 个人或教学用项目主目录
-│   ├── project1\
-│   └── project2\
-│
-├── Models\                 ← AI 模型、数据集、第三方预训练包集中存放目录
-│   └── llama3\
-│
-└── Tools\                 ← 实用工具包、脚本、构建组件
-```
-
+└── DevProjects\                ← 项目统一管理目录
+    └── MyProj\
+        ├── .venv\              ← 项目专属虚拟环境（构建工具已本地化）
+        ├── src\
+        ├── data\
+        └── pyproject.toml
 ---
 
-## 🛠 关键迁移实践
-
-### 1. WSL 子系统迁移
-
-使用导出 / 导入方式实现迁移（参考原文实践）：
+## ⚙ 环境创建命令示例（无需过多参数）
 
 ```powershell
-# 导出
-wsl --export <发行版名称> I:\WSL\fedora.tar
+# 创建 Python 3.10 环境默认储存在 conda 安装目录下的 envs 子目录）
+conda create py310 python=3.10 -y
 
-# 注销旧系统
-wsl --unregister <发行版名称>
+# 激活该环境（注意：无需使用长命令）
+Conda activate py310
 
-# 导入新路径
-wsl --import Fedora-41 I:\WSL\Fedora-41 I:\WSL\fedora.tar
-```
+# 安装构建工具链
+pip install poetry virtualenv pipenv uv hatch
+````
 
-详见：[如何将 WSL 迁移到 I 盘路径](https://aicity.blog.csdn.net/article/details/148874083)
-
----
-
-### 2. Docker 镜像与卷路径迁移
-
-采用 PowerShell 创建符号链接静默迁移（**避免直接改配置导致出错**）：
-
-```powershell
-# 停止 Docker Desktop
-Stop-Process -Name "Docker Desktop" -Force
-
-# 移动 Docker 镜像目录到新位置
-Move-Item "$env:USERPROFILE\AppData\Local\Docker" "I:\Docker\data-root"
-
-# 创建符号链接
-cmd /c mklink /D "$env:USERPROFILE\AppData\Local\Docker" "I:\Docker\data-root"
-
-# 重启 Docker Desktop 即可
-```
-
-详见：[Docker Desktop 镜像路径静默迁移方案](https://aicity.blog.csdn.net/article/details/149172789)
-
----
-
-### 3. Anaconda 多版本环境集中管理
-
-将 Anaconda 安装路径设为 `I:\Conda`，有预见性地缩短路径字符长度，并统一管理：
-
+### 2. 使用 `D:\PyEnv\`（自定义路径）
 ```text
-I:\Conda\
-│
-├── base\              ← 默认环境（对应默认 python 版本）
-├── python38\          ← 创建新环境并指定 python 版本
-├── python39\
-├── python310\
-├── python311\
-├── python312\
-├── python313\
-├── python314\
-└── ...
+D:\
+├── Conda\                      ← Conda 主程序安装路径（不放环境）
+└── PyEnv\                      ← 所有 Conda 版本环境集中管理
+    ├── py38\
+    ├── py310\
+    └── py312\
+
+I:\
+└── DevProjects\                ← 项目统一管理目录
+    └── MyProj\
+        ├── .venv\              ← 项目专属虚拟环境（构建工具已本地化）
+        ├── src\
+        ├── data\
+        └── pyproject.toml
+---
+
+## ⚙ 环境创建命令示例（使用 `-p`）
+
+```powershell
+# 创建 Python 3.10 环境到指定路径（而不是默认的 envs 子目录）
+conda create -p D:\PyEnv\py310 python=3.10 -y
+
+# 激活该环境（注意：需使用 activate 的完整路径）
+D:\Conda\Scripts\activate.bat D:\PyEnv\py310
+
+# 安装构建工具链
+pip install poetry virtualenv pipenv uv hatch
+````
+
+---
+
+## 🧰 两种路径结构选择对比
+
+### 1. 使用 `D:\Conda\envs\`（默认路径）
+
+这种结构是 Conda 默认使用的路径结构，将环境放置在 `envs` 子目录下。
+
+#### 激活方式：
+
+```powershell
+conda activate py310  # 使用环境名称激活
 ```
 
-> 每个虚拟环境均可作为独立 Python 解释器调用，避免污染全局 PATH。
+#### 优点：
 
-详见：[Anaconda 多版本虚拟环境路径规划](https://aicity.blog.csdn.net/article/details/149021241)
+* **简洁**：直接使用 `conda activate` 激活环境，免去路径指定。
+* **兼容性高**：与 Conda 默认配置完全一致，工具链支持好。
 
----
+#### 缺点：
 
-## ✅ 治理效果对比
-
-| 方面    | 无治理（默认路径）      | 有治理（统一结构）  |
-| ----- | -------------- | ---------- |
-| 系统盘压力 | 高，AppData 快速膨胀 | 最低，仅用于系统运行 |
-| 项目迁移  | 繁琐，依赖默认路径      | 一键导入路径结构即可 |
-| 开发协同  | 困难，路径难复用       | 统一规范，路径通用  |
-| 构建复现  | 无法保证           | 完全可控       |
+* **路径可能较长**：由于默认路径深，可能会触发 Windows 路径限制（260 字符）。
+* **环境路径较杂乱**：环境集中存放在 `envs` 目录下，多个环境容易混淆，管理上不如自定义路径清晰。
 
 ---
 
-## 📌 总结
+### 2. 使用 `D:\PyEnv\`（自定义路径）
 
-路径结构治理是 AI 开发环境构建的第一步。
+通过 `conda create -p` 命令指定自定义路径，可以将环境集中管理，避免 `envs` 目录带来的杂乱（特殊场景下可添加环境变量使用，为覆盖所有使用场景，所以环境变量路径长度应尽量保持精简）。
 
-只有当你的各类工具、镜像、环境、项目、数据集**都有了明确的归属与分区**，你才能真正做到：
+#### 激活方式：
 
-* 环境清晰可控
-* 项目快速迁移
-* 结构稳固复现
-* 教学统一部署
+```powershell
+# 使用绝对路径激活
+D:\Conda\Scripts\activate.bat D:\PyEnv\py310
 
-> 推荐进一步阅读：[三维治理理念原文](https://aicity.blog.csdn.net/article/details/149055334)
+# 或注册后使用 conda activate（初始化一次后）
+conda activate D:\PyEnv\py310
+```
+
+#### 优点：
+
+* **路径短且清晰**：自定义路径使环境结构更加简洁直观，避免 `envs` 子目录层级过深。
+* **集中管理**：所有 Conda 环境集中存储在 `D:\PyEnv`，便于管理与迁移。
+* **减少路径限制问题**：短路径适配更多工具，减少路径长度限制带来的错误。
+
+#### 缺点：
+
+* **激活方式稍显麻烦**：需要指定环境路径，或先初始化一次以便使用 `conda activate`，不如默认路径方便。
+
+---
+
+## 🧰 环境变量与 PATH 设置建议
+
+| 设置项        | 推荐做法                                                          |
+| ---------- |---------------------------------------------------------------|
+| Conda 安装路径 | 安装到 `D:\Conda`，路径尽量短，避免权限问题                                   |
+| 系统 PATH    | **不添加 Conda 到 PATH**，使用显式路径调用 Conda 工具                        |
+| Conda 激活方式 | conda activate 环境名 或 使用完整路径调用：`D:\Conda\Scripts\activate.bat` |
+| 构建工具使用     | 使用 `.venv` 中本地化构建工具，避免全局版本污染                                  |
+
+---
+
+## ✅ 路径治理优势汇总
+
+* **路径更短**：显著降低路径深度，避免长路径错误。
+* **集中管理**：所有 Conda 环境集中于 `D:\PyEnv 或 D:\Conda\envs\`，一目了然。
+* **权限清晰**：D 盘专属路径无系统盘限制，部署更稳定。
+* **可复现性高**：每个项目 `.venv` 完全自包含，迁移零依赖。
+
+---
+
+## 📚 延伸阅读
+
+* [01 · 理念概述：三维治理、四级隔离、五项自治](./01-理念概述.md)
+* [03 · Anaconda 多版本策略](./03-Anaconda多版本策略.md)
+
+```
+
+此文档介绍了两种路径结构方案，详细比较了它们的优缺点，并建议新手选择适合的路径结构。
+```
