--- a/docs/04-工具链隔离.md
+++ b/docs/04-工具链隔离.md
@@ -1,207 +1,210 @@
-# 04 · 工具链隔离：构建工具本地化与双层隔离实践
+# 04 · 工具链隔离：构建工具与运行环境解耦的最佳实践
 
-> 本章节聚焦 Python 构建工具的隔离策略，通过“Conda 引导 + 项目 .venv 本地化”的双层架构，解决全局工具污染、版本冲突、迁移困难等问题，实现构建环境的可控与复现。
-
----
-
-## 构建工具的本地化隔离原则
-
-在 Python 项目中，`poetry`、`uv`、`hatch` 等构建工具是自动化依赖管理的核心，但“全局安装”模式常导致：  
-- 多项目版本冲突  
-- 路径污染与依赖混乱  
-- 环境迁移后无法复现  
-
-本节提出**双层隔离策略**，实现工具链的精准治理：  
-1. **Conda 环境层**：统一预装工具，用于项目初始化与引导  
-2. **项目 .venv 层**：工具本地化安装，用于实际运行与部署  
+> 本文围绕「三维治理」中“工具治理”维度，提出一套可复现、低耦合、结构清晰的工具链隔离方案，确保构建工具的版本不干扰项目运行环境，实现“工具链即构建器”。
 
 ---
 
-## 一、为什么构建工具不能全局装？
+## 🎯 为什么要工具链隔离？
 
-### 常见错误做法  
-- 直接在系统 Python 中执行 `pip install poetry` 全局安装  
-- 所有项目共享同一套工具版本  
-- 项目构建依赖外部环境配置  
+在传统开发流程中，构建工具（如 `poetry` / `pipenv` / `hatch` / `uv`）往往直接安装在全局环境中，这可能导致：
 
-### 导致的问题  
-- 工具版本冲突（如项目 A 需要 Poetry 1.7，项目 B 需要 1.8）  
-- 迁移失败（新机器无对应工具版本，需重新配置）  
-- IDE 路径混乱（VSCode/PyCharm 无法正确识别工具位置）  
+- 🧨 工具版本升级破坏现有项目构建流程；
+- 🌀 多项目使用不同构建工具产生依赖冲突；
+- 🧳 克隆迁移后工具丢失、环境不可复现；
+- 🪤 初学者误操作全局环境，引发系统紊乱。
+
+为此，我们提出：**工具链不应进入运行时，只用于构建 `.venv`，本身也应具备隔离性与可重建性**。
 
 ---
 
-## 二、双层治理策略设计
-
-| 层级               | 作用                          | 工具存放路径                          |  
-|--------------------|-------------------------------|---------------------------------------|  
-| **Conda 环境层**   | 项目初始化与工具引导          | `I:\Conda\python312\Scripts\`         |  
-| **项目 .venv 层**  | 本地运行与版本锁定            | `myproject\.venv\Scripts\`            |  
-
-
-### 策略流程图  
-![04- 策略流程图.png](04-%20%E7%AD%96%E7%95%A5%E6%B5%81%E7%A8%8B%E5%9B%BE.png)
+## 🧭 构建工具的双层隔离架构
 
 ```mermaid
 graph TD
-    A[Conda 多版本环境] --> B[预装构建工具（poetry/uv/hatch）]
-    B --> C[创建项目目录]
-    C --> D[用 venv 初始化 .venv 环境]
-    D --> E[在 .venv 中重新安装工具]
-    E --> F[本地构建 / 运行 / 部署]
-```  
+    A[Conda 多版本环境 (D:\PyEnv\py310)] --> B[构建工具链环境 (Poetry / UV / Hatch 等)]
+    B --> C[项目 .venv]
+    C --> D[项目运行时依赖（仅限项目本地）]
+````
+
+| 隔离层级       | 描述                 | 示例路径                          |
+| ---------- | ------------------ | ----------------------------- |
+| Conda 环境   | 按 Python 版本管理工具链环境 | `D:\PyEnv\py310`              |
+| 构建工具链      | 每个 Conda 环境内安装工具链  | `pip install poetry uv ...`   |
+| 项目 `.venv` | 构建出的项目本地依赖隔离环境     | `I:\DevProjects\MyProj\.venv` |
 
 ---
 
-## 三、实践步骤
+## ✅ 推荐做法 一：工具链仅用于 `.venv` 构建，不参与运行
 
-### 1️⃣ 在 Conda 中准备构建工具  
-激活目标 Conda 环境，预装基础工具（用于项目初始化）：  
-```bash
-conda activate python312  # 切换到目标 Python 版本环境
-pip install poetry virtualenv pipenv uv hatch  # 安装工具到 Conda Python 版本基础环境
-```
+### 示例流程（Python 3.10）
 
-示例：名为 python312 的 conda 环境 工具链路径树状图：
-```bash
-│  │  
-│  │  
-│  ├─ python312 环境（Python 3.12）  
-│  │  ├─ python.exe: I:\Conda\python312\python.exe  
-│  │  ├─ 工具路径: I:\Conda\python312\Scripts\  
-│  │  │  ├─ poetry.exe: I:\Conda\python312\Scripts\poetry.exe  
-│  │  │  ├─ virtualenv.exe: I:\Conda\python312\Scripts\virtualenv.exe  
-│  │  │  ├─ pipenv.exe: I:\Conda\python312\Scripts\pipenv.exe  
-│  │  │  ├─ uv.exe: I:\Conda\python312\Scripts\uv.exe  
-│  │  │  └─ hatch.exe: I:\Conda\python312\Scripts\hatch.exe  
-│  │  ├─ PyCharm解释器路径: I:\Conda\python312\python.exe  
-│  │  └─ 终端命令示例:  
-│  │     ├─ poetry: "I:\Conda\python312\Scripts\poetry.exe" init  
-│  │     ├─ virtualenv: "I:\Conda\python312\python.exe" -m virtualenv .venv  
-│  │     ├─ pipenv: "I:\Conda\python312\Scripts\pipenv.exe" install requests  
-│  │     ├─ uv: "I:\Conda\python312\Scripts\uv.exe" new .venv  
-│  │     └─ hatch: "I:\Conda\python312\Scripts\hatch.exe" env create  
-│  │  
-│  └─
+```powershell
+# Step 1：激活 Conda 中的 py310 工具链环境
+D:\Conda\Scripts\activate.bat D:\PyEnv\py310
+
+# Step 2：在此环境中安装构建工具（全面）
+pip install poetry uv hatch pipenv virtualenv
+
+# Step 3：进入项目目录，构建 `.venv` 虚拟环境（四级隔离）
+cd I:\DevProjects\MyProj
+
+# 使用 uv 创建 .venv
+uv venv .venv
+
+# 使用 poetry 创建 .venv（自动生成 pyproject.toml）
+poetry init
+poetry install
 ```
 
 
-示例：完整的各版本python conda 环境 工具链路径树状图：
-```bash
-Anaconda 环境（基础路径：I:\Conda\）  
+## ✅ 推荐做法 二：工具本地化，使工具在`.venv`中自包含 参与运行
+
+### 示例流程（.venv）
+
+```powershell
+#  项目工具链本地化 (xxx.exe 文件的 .venv 内调用)
+ 
+#  在新建好的 poetry 环境中执行（建议）
+pip install poetry
+ 
+#  在新建好的 virtualenv 环境中执行（可选）
+pip install virtualenv
+ 
+ 
+#  在新建好的 pipenv 环境中执行（可选）
+pip install pipenv
+ 
+ 
+#  在新建好的 uv 环境中执行（建议）
+uv pip install uv
+ 
+ 
+#  在新建好的 hatch 环境中执行（建议）
+hatch run pip install hatch
+```
+---
+## 📁 工具路径结构树状示例图
+
+### 1. 使用 `D:\Conda\envs\`（默认路径）
+```text
+Anaconda 环境（基础路径：D:\Conda\）  
 ├─ base 环境（默认 Python 版本）  
-│  ├─ python.exe: I:\Conda\\python.exe  
-│  ├─ 工具路径: I:\Conda\\Scripts\  
-│  │  ├─ poetry.exe: I:\Conda\\Scripts\poetry.exe  
-│  │  ├─ virtualenv.exe: I:\Conda\\Scripts\virtualenv.exe  
-│  │  ├─ pipenv.exe: I:\Conda\\Scripts\pipenv.exe  
-│  │  ├─ uv.exe: I:\Conda\\Scripts\uv.exe  
-│  │  └─ hatch.exe: I:\Conda\\Scripts\hatch.exe  
-│  ├─ PyCharm解释器路径: I:\Conda\\python.exe  
+│  ├─ python.exe: D:\Conda\python.exe  
+│  ├─ 工具路径: D:\Conda\Scripts\  
+│  │  ├─ poetry.exe: D:\Conda\Scripts\poetry.exe  
+│  │  ├─ virtualenv.exe: D:\Conda\Scripts\virtualenv.exe  
+│  │  ├─ pipenv.exe: D:\Conda\Scripts\pipenv.exe  
+│  │  ├─ uv.exe: D:\Conda\Scripts\uv.exe  
+│  │  └─ hatch.exe: D:\Conda\Scripts\hatch.exe  
+│  ├─ PyCharm解释器路径: D:\Conda\python.exe  
 │  └─ 终端命令示例:  
-│     ├─ poetry: "I:\Conda\\Scripts\poetry.exe" init  
-│     ├─ virtualenv: "I:\Conda\\python.exe" -m virtualenv .venv  
-│     ├─ pipenv: "I:\Conda\\Scripts\pipenv.exe" install requests  
-│     ├─ uv: "I:\Conda\\Scripts\uv.exe" new .venv  
-│     └─ hatch: "I:\Conda\\Scripts\hatch.exe" env create  
+│     ├─ poetry: "D:\Conda\Scripts\poetry.exe" init  
+│     ├─ virtualenv: "D:\Conda\python.exe" -m virtualenv .venv  
+│     ├─ pipenv: "D:\Conda\Scripts\pipenv.exe" install requests  
+│     ├─ uv: "D:\Conda\Scripts\uv.exe" new .venv  
+│     └─ hatch: "D:\Conda\Scripts\hatch.exe" env create  
 │  
-├─ 环境路径（I:\Conda\）  
-│  ├─ python38 环境（Python 3.8）  
-│  │  ├─ python.exe: I:\Conda\python38\python.exe  
-│  │  ├─ 工具路径: I:\Conda\python38\Scripts\  
-│  │  │  ├─ poetry.exe: I:\Conda\python38\Scripts\poetry.exe  
-│  │  │  ├─ virtualenv.exe: I:\Conda\python38\Scripts\virtualenv.exe  
-│  │  │  ├─ pipenv.exe: I:\Conda\python38\Scripts\pipenv.exe  
-│  │  │  ├─ uv.exe: I:\Conda\python38\Scripts\uv.exe  
-│  │  │  └─ hatch.exe: I:\Conda\python38\Scripts\hatch.exe  
-│  │  ├─ PyCharm解释器路径: I:\Conda\python38\python.exe  
+├─ 环境路径（D:\Conda\envs\py38\）  
+│  ├─ py38 环境（Python 3.8）  
+│  │  ├─ python.exe: D:\Conda\envs\py38\python.exe  
+│  │  ├─ 工具路径: D:\Conda\envs\py38\Scripts\  
+│  │  │  ├─ poetry.exe: D:\Conda\envs\py38\Scripts\poetry.exe  
+│  │  │  ├─ virtualenv.exe: D:\Conda\envs\py38\Scripts\virtualenv.exe  
+│  │  │  ├─ pipenv.exe: D:\Conda\envs\py38\Scripts\pipenv.exe  
+│  │  │  ├─ uv.exe: D:\Conda\envs\py38\Scripts\uv.exe  
+│  │  │  └─ hatch.exe: D:\Conda\envs\py38\Scripts\hatch.exe  
+│  │  ├─ PyCharm解释器路径: D:\Conda\envs\py38\python.exe  
 │  │  └─ 终端命令示例:  
-│  │     ├─ poetry: "I:\Conda\python38\Scripts\poetry.exe" init  
-│  │     ├─ virtualenv: "I:\Conda\python38\python.exe" -m virtualenv .venv  
-│  │     ├─ pipenv: "I:\Conda\python38\Scripts\pipenv.exe" install requests  
-│  │     ├─ uv: "I:\Conda\python38\Scripts\uv.exe" new .venv  
-│  │     └─ hatch: "I:\Conda\python38\Scripts\hatch.exe" env create  
+│  │     ├─ poetry: "D:\Conda\envs\py38\Scripts\poetry.exe" init  
+│  │     ├─ virtualenv: "D:\Conda\envs\py38\python.exe" -m virtualenv .venv  
+│  │     ├─ pipenv: "D:\Conda\envs\py38\Scripts\pipenv.exe" install requests  
+│  │     ├─ uv: "D:\Conda\envs\py38\Scripts\uv.exe" new .venv  
+│  │     └─ hatch: "D:\Conda\envs\py38\Scripts\hatch.exe" env create  
 │  │  
-├─ 环境路径（I:\Conda\）  
-│  ├─ python39 环境（Python 3.9）  
-│  │  ├─ python.exe: I:\Conda\python39\python.exe  
-│  │  ├─ 工具路径: I:\Conda\python39\Scripts\  
-│  │  │  ├─ poetry.exe: I:\Conda\python39\Scripts\poetry.exe  
-│  │  │  ├─ virtualenv.exe: I:\Conda\python39\Scripts\virtualenv.exe  
-│  │  │  ├─ pipenv.exe: I:\Conda\python39\Scripts\pipenv.exe  
-│  │  │  ├─ uv.exe: I:\Conda\python39\Scripts\uv.exe  
-│  │  │  └─ hatch.exe: I:\Conda\python39\Scripts\hatch.exe  
-│  │  ├─ PyCharm解释器路径: I:\Conda\python39\python.exe  
+├─ 环境路径（D:\Conda\envs\py39\）  
+│  ├─ py39 环境（Python 3.9）  
+│  │  ├─ python.exe: D:\Conda\envs\py39\python.exe  
+│  │  ├─ 工具路径: D:\Conda\envs\py39\Scripts\  
+│  │  │  ├─ poetry.exe: D:\Conda\envs\py39\Scripts\poetry.exe  
+│  │  │  ├─ virtualenv.exe: D:\Conda\envs\py39\Scripts\virtualenv.exe  
+│  │  │  ├─ pipenv.exe: D:\Conda\envs\py39\Scripts\pipenv.exe  
+│  │  │  ├─ uv.exe: D:\Conda\envs\py39\Scripts\uv.exe  
+│  │  │  └─ hatch.exe: D:\Conda\envs\py39\Scripts\hatch.exe  
+│  │  ├─ PyCharm解释器路径: D:\Conda\envs\py39\python.exe  
 │  │  └─ 终端命令示例:  
-│  │     ├─ poetry: "I:\Conda\python39\Scripts\poetry.exe" init  
-│  │     ├─ virtualenv: "I:\Conda\python39\python.exe" -m virtualenv .venv  
-│  │     ├─ pipenv: "I:\Conda\python39\Scripts\pipenv.exe" install requests  
-│  │     ├─ uv: "I:\Conda\python39\Scripts\uv.exe" new .venv  
-│  │     └─ hatch: "I:\Conda\python39\Scripts\hatch.exe" env create  
+│  │     ├─ poetry: "D:\Conda\envs\py39\Scripts\poetry.exe" init  
+│  │     ├─ virtualenv: "D:\Conda\envs\py39\python.exe" -m virtualenv .venv  
+│  │     ├─ pipenv: "D:\Conda\envs\py39\Scripts\pipenv.exe" install requests  
+│  │     ├─ uv: "D:\Conda\envs\py39\Scripts\uv.exe" new .venv  
+│  │     └─ hatch: "D:\Conda\envs\py39\Scripts\hatch.exe" env create  
 │  │  
-│  ├─ python310 环境（Python 3.10）  
-│  │  ├─ python.exe: I:\Conda\python310\python.exe  
-│  │  ├─ 工具路径: I:\Conda\python310\Scripts\  
-│  │  │  ├─ poetry.exe: I:\Conda\python310\Scripts\poetry.exe  
-│  │  │  ├─ virtualenv.exe: I:\Conda\python310\Scripts\virtualenv.exe  
-│  │  │  ├─ pipenv.exe: I:\Conda\python310\Scripts\pipenv.exe  
-│  │  │  ├─ uv.exe: I:\Conda\python310\Scripts\uv.exe  
-│  │  │  └─ hatch.exe: I:\Conda\python310\Scripts\hatch.exe  
-│  │  ├─ PyCharm解释器路径: I:\Conda\python310\python.exe  
+├─ 环境路径（D:\Conda\envs\py310\）  
+│  ├─ py310 环境（Python 3.10）  
+│  │  ├─ python.exe: D:\Conda\envs\py310\python.exe  
+│  │  ├─ 工具路径: D:\Conda\envs\py310\Scripts\  
+│  │  │  ├─ poetry.exe: D:\Conda\envs\py310\Scripts\poetry.exe  
+│  │  │  ├─ virtualenv.exe: D:\Conda\envs\py310\Scripts\virtualenv.exe  
+│  │  │  ├─ pipenv.exe: D:\Conda\envs\py310\Scripts\pipenv.exe  
+│  │  │  ├─ uv.exe: D:\Conda\envs\py310\Scripts\uv.exe  
+│  │  │  └─ hatch.exe: D:\Conda\envs\py310\Scripts\hatch.exe  
+│  │  ├─ PyCharm解释器路径: D:\Conda\envs\py310\python.exe  
 │  │  └─ 终端命令示例:  
-│  │     ├─ poetry: "I:\Conda\python310\Scripts\poetry.exe" init  
-│  │     ├─ virtualenv: "I:\Conda\python310\python.exe" -m virtualenv .venv  
-│  │     ├─ pipenv: "I:\Conda\python310\Scripts\pipenv.exe" install requests  
-│  │     ├─ uv: "I:\Conda\python310\Scripts\uv.exe" new .venv  
-│  │     └─ hatch: "I:\Conda\python310\Scripts\hatch.exe" env create  
+│  │     ├─ poetry: "D:\Conda\envs\py310\Scripts\poetry.exe" init  
+│  │     ├─ virtualenv: "D:\Conda\envs\py310\python.exe" -m virtualenv .venv  
+│  │     ├─ pipenv: "D:\Conda\envs\py310\Scripts\pipenv.exe" install requests  
+│  │     ├─ uv: "D:\Conda\envs\py310\Scripts\uv.exe" new .venv  
+│  │     └─ hatch: "D:\Conda\envs\py310\Scripts\hatch.exe" env create  
 │  │  
-│  ├─ python311 环境（Python 3.11）  
-│  │  ├─ python.exe: I:\Conda\python311\python.exe  
-│  │  ├─ 工具路径: I:\Conda\python311\Scripts\  
-│  │  │  ├─ poetry.exe: I:\Conda\python311\Scripts\poetry.exe  
-│  │  │  ├─ virtualenv.exe: I:\Conda\python311\Scripts\virtualenv.exe  
-│  │  │  ├─ pipenv.exe: I:\Conda\python311\Scripts\pipenv.exe  
-│  │  │  ├─ uv.exe: I:\Conda\python311\Scripts\uv.exe  
-│  │  │  └─ hatch.exe: I:\Conda\python311\Scripts\hatch.exe  
-│  │  ├─ PyCharm解释器路径: I:\Conda\python311\python.exe  
+├─ 环境路径（D:\Conda\envs\py311\）  
+│  ├─ py311 环境（Python 3.11）  
+│  │  ├─ python.exe: D:\Conda\envs\py311\python.exe  
+│  │  ├─ 工具路径: D:\Conda\envs\py311\Scripts\  
+│  │  │  ├─ poetry.exe: D:\Conda\envs\py311\Scripts\poetry.exe  
+│  │  │  ├─ virtualenv.exe: D:\Conda\envs\py311\Scripts\virtualenv.exe  
+│  │  │  ├─ pipenv.exe: D:\Conda\envs\py311\Scripts\pipenv.exe  
+│  │  │  ├─ uv.exe: D:\Conda\envs\py311\Scripts\uv.exe  
+│  │  │  └─ hatch.exe: D:\Conda\envs\py311\Scripts\hatch.exe  
+│  │  ├─ PyCharm解释器路径: D:\Conda\envs\py311\python.exe  
 │  │  └─ 终端命令示例:  
-│  │     ├─ poetry: "I:\Conda\python311\Scripts\poetry.exe" init  
-│  │     ├─ virtualenv: "I:\Conda\python311\python.exe" -m virtualenv .venv  
-│  │     ├─ pipenv: "I:\Conda\python311\Scripts\pipenv.exe" install requests  
-│  │     ├─ uv: "I:\Conda\python311\Scripts\uv.exe" new .venv  
-│  │     └─ hatch: "I:\Conda\python311\Scripts\hatch.exe" env create  
+│  │     ├─ poetry: "D:\Conda\envs\py311\Scripts\poetry.exe" init  
+│  │     ├─ virtualenv: "D:\Conda\envs\py311\python.exe" -m virtualenv .venv  
+│  │     ├─ pipenv: "D:\Conda\envs\py311\Scripts\pipenv.exe" install requests  
+│  │     ├─ uv: "D:\Conda\envs\py311\Scripts\uv.exe" new .venv  
+│  │     └─ hatch: "D:\Conda\envs\py311\Scripts\hatch.exe" env create  
 │  │  
-│  ├─ python312 环境（Python 3.12）  
-│  │  ├─ python.exe: I:\Conda\python312\python.exe  
-│  │  ├─ 工具路径: I:\Conda\python312\Scripts\  
-│  │  │  ├─ poetry.exe: I:\Conda\python312\Scripts\poetry.exe  
-│  │  │  ├─ virtualenv.exe: I:\Conda\python312\Scripts\virtualenv.exe  
-│  │  │  ├─ pipenv.exe: I:\Conda\python312\Scripts\pipenv.exe  
-│  │  │  ├─ uv.exe: I:\Conda\python312\Scripts\uv.exe  
-│  │  │  └─ hatch.exe: I:\Conda\python312\Scripts\hatch.exe  
-│  │  ├─ PyCharm解释器路径: I:\Conda\python312\python.exe  
+├─ 环境路径（D:\Conda\envs\py312\）  
+│  ├─ py312 环境（Python 3.12）  
+│  │  ├─ python.exe: D:\Conda\envs\py312\python.exe  
+│  │  ├─ 工具路径: D:\Conda\envs\py312\Scripts\  
+│  │  │  ├─ poetry.exe: D:\Conda\envs\py312\Scripts\poetry.exe  
+│  │  │  ├─ virtualenv.exe: D:\Conda\envs\py312\Scripts\virtualenv.exe  
+│  │  │  ├─ pipenv.exe: D:\Conda\envs\py312\Scripts\pipenv.exe  
+│  │  │  ├─ uv.exe: D:\Conda\envs\py312\Scripts\uv.exe  
+│  │  │  └─ hatch.exe: D:\Conda\envs\py312\Scripts\hatch.exe  
+│  │  ├─ PyCharm解释器路径: D:\Conda\envs\py312\python.exe  
 │  │  └─ 终端命令示例:  
-│  │     ├─ poetry: "I:\Conda\python312\Scripts\poetry.exe" init  
-│  │     ├─ virtualenv: "I:\Conda\python312\python.exe" -m virtualenv .venv  
-│  │     ├─ pipenv: "I:\Conda\python312\Scripts\pipenv.exe" install requests  
-│  │     ├─ uv: "I:\Conda\python312\Scripts\uv.exe" new .venv  
-│  │     └─ hatch: "I:\Conda\python312\Scripts\hatch.exe" env create  
+│  │     ├─ poetry: "D:\Conda\envs\py312\Scripts\poetry.exe" init  
+│  │     ├─ virtualenv: "D:\Conda\envs\py312\python.exe" -m virtualenv .venv  
+│  │     ├─ pipenv: "D:\Conda\envs\py312\Scripts\pipenv.exe" install requests  
+│  │     ├─ uv: "D:\Conda\envs\py312\Scripts\uv.exe" new .venv  
+│  │     └─ hatch: "D:\Conda\envs\py312\Scripts\hatch.exe" env create  
 │  │  
-│  └─ python313 环境（Python 3.13）  
-│     ├─ python.exe: I:\Conda\python313\python.exe  
-│     ├─ 工具路径: I:\Conda\python313\Scripts\  
-│     │  ├─ poetry.exe: I:\Conda\python313\Scripts\poetry.exe  
-│     │  ├─ virtualenv.exe: I:\Conda\python313\Scripts\virtualenv.exe  
-│     │  ├─ pipenv.exe: I:\Conda\python313\Scripts\pipenv.exe  
-│     │  ├─ uv.exe: I:\Conda\python313\Scripts\uv.exe  
-│     │  └─ hatch.exe: I:\Conda\python313\Scripts\hatch.exe  
-│     ├─ PyCharm解释器路径: I:\Conda\python313\python.exe  
+├─ 环境路径（D:\Conda\envs\py313\）  
+│  └─ py313 环境（Python 3.13）  
+│     ├─ python.exe: D:\Conda\envs\py313\python.exe  
+│     ├─ 工具路径: D:\Conda\envs\py313\Scripts\  
+│     │  ├─ poetry.exe: D:\Conda\envs\py313\Scripts\poetry.exe  
+│     │  ├─ virtualenv.exe: D:\Conda\envs\py313\Scripts\virtualenv.exe  
+│     │  ├─ pipenv.exe: D:\Conda\envs\py313\Scripts\pipenv.exe  
+│     │  ├─ uv.exe: D:\Conda\envs\py313\Scripts\uv.exe  
+│     │  └─ hatch.exe: D:\Conda\envs\py313\Scripts\hatch.exe  
+│     ├─ PyCharm解释器路径: D:\Conda\envs\py313\python.exe  
 │     └─ 终端命令示例:  
-│        ├─ poetry: "I:\Conda\python313\Scripts\poetry.exe" init  
-│        ├─ virtualenv: "I:\Conda\python313\python.exe" -m virtualenv .venv  
-│        ├─ pipenv: "I:\Conda\python313\Scripts\pipenv.exe" install requests  
-│        ├─ uv: "I:\Conda\python313\Scripts\uv.exe" new .venv  
-│        └─ hatch: "I:\Conda\python313\Scripts\hatch.exe" env create  
+│        ├─ poetry: "D:\Conda\envs\py313\Scripts\poetry.exe" init  
+│        ├─ virtualenv: "D:\Conda\envs\py313\python.exe" -m virtualenv .venv  
+│        ├─ pipenv: "D:\Conda\envs\py313\Scripts\pipenv.exe" install requests  
+│        ├─ uv: "D:\Conda\envs\py313\Scripts\uv.exe" new .venv  
+│        └─ hatch: "D:\Conda\envs\py313\Scripts\hatch.exe" env create  
 │  
 └─ MSYS2 环境（D:\msys64\mingw64）  
    └─ Python 3.12 环境（如需）  
@@ -211,99 +214,217 @@ Anaconda 环境（基础路径：I:\Conda\）
       │  ├─ virtualenv.exe: D:\msys64\mingw64\bin\virtualenv.exe  
       │  ├─ pipenv.exe: D:\msys64\mingw64\bin\pipenv.exe  
       │  ├─ uv.exe: D:\msys64\mingw64\bin\uv.exe  
-      │  └─ hatch.exe: 暂未支持 MSYS2 环境
+      │  └─ hatch.exe: 暂未支持 MSYS2 环境  
       ├─ PyCharm解释器路径: D:\msys64\mingw64\bin\python.exe  
       └─ 终端命令示例:  
          ├─ poetry: "D:\msys64\mingw64\bin\poetry.exe" init  
          ├─ virtualenv: "D:\msys64\mingw64\bin\python.exe" -m virtualenv .venv  
          ├─ pipenv: "D:\msys64\mingw64\bin\pipenv.exe" install requests  
          ├─ uv: "D:\msys64\mingw64\bin\uv.exe" new .venv  
-         └─ hatch: "暂未支持 MSYS2 环境
+         └─ hatch: 暂未支持 MSYS2 环境  
+````
 
-```
 
-### 2️⃣ 使用工具初始化项目  
-通过 Conda 中的工具快速创建项目结构：  
-```bash
-# 方案 1：用 uv 创建项目（推荐）
-uv venv new myproject && cd myproject
 
-# 方案 2：用 poetry 创建项目
-poetry new myproject && cd myproject
-```
-
-### 3️⃣ 在项目中创建并激活 .venv  
-将工具本地化到项目目录，实现隔离：  
-```bash
-# 初始化项目虚拟环境
-python -m venv .venv
-
-# 激活 .venv（Windows 环境）
-.\.venv\Scripts\activate
-
-# 在 .venv 中重新安装工具（锁定版本）
-pip install poetry==1.8.2 uv==0.1.37 hatch==1.9.4
-```
-
----
-
-## 四、路径隔离优势
-
-1. **版本独立**：每个项目的工具版本可单独锁定，互不干扰  
-2. **迁移便捷**：`.venv` 包含所有工具，复制项目即可运行，无需全局依赖  
-3. **路径清晰**：IDE 可直接识别 `.venv/Scripts` 下的工具，配置零障碍  
-
-### 项目结构示例  
+### 2. 使用 `D:\PyEnv\`（自定义路径）
 ```text
-myproject/
-├── .venv/                  # 本地化工具与依赖
-│   ├── Scripts/
-│   │   ├── poetry.exe      # 项目专属工具
-│   │   ├── uv.exe
-│   │   └── python.exe
-│   └── pyvenv.cfg
-├── pyproject.toml          # 依赖配置文件
-└── src/                    # 项目源码
+Anaconda 环境（基础路径：D:\Conda\）  
+├─ base 环境（默认 Python 版本）  
+│  ├─ python.exe: D:\Conda\python.exe  
+│  ├─ 工具路径: D:\Conda\Scripts\  
+│  │  ├─ poetry.exe: D:\Conda\Scripts\poetry.exe  
+│  │  ├─ virtualenv.exe: D:\Conda\Scripts\virtualenv.exe  
+│  │  ├─ pipenv.exe: D:\Conda\Scripts\pipenv.exe  
+│  │  ├─ uv.exe: D:\Conda\Scripts\uv.exe  
+│  │  └─ hatch.exe: D:\Conda\Scripts\hatch.exe  
+│  ├─ PyCharm解释器路径: D:\Conda\python.exe  
+│  └─ 终端命令示例:  
+│     ├─ poetry: "D:\Conda\Scripts\poetry.exe" init  
+│     ├─ virtualenv: "D:\Conda\python.exe" -m virtualenv .venv  
+│     ├─ pipenv: "D:\Conda\Scripts\pipenv.exe" install requests  
+│     ├─ uv: "D:\Conda\Scripts\uv.exe" new .venv  
+│     └─ hatch: "D:\Conda\Scripts\hatch.exe" env create  
+│  
+├─ 环境路径（D:\PyEnv\py38\）  
+│  ├─ py38 环境（Python 3.8）  
+│  │  ├─ python.exe: D:\PyEnv\py38\python.exe  
+│  │  ├─ 工具路径: D:\PyEnv\py38\Scripts\  
+│  │  │  ├─ poetry.exe: D:\PyEnv\py38\Scripts\poetry.exe  
+│  │  │  ├─ virtualenv.exe: D:\PyEnv\py38\Scripts\virtualenv.exe  
+│  │  │  ├─ pipenv.exe: D:\PyEnv\py38\Scripts\pipenv.exe  
+│  │  │  ├─ uv.exe: D:\PyEnv\py38\Scripts\uv.exe  
+│  │  │  └─ hatch.exe: D:\PyEnv\py38\Scripts\hatch.exe  
+│  │  ├─ PyCharm解释器路径: D:\PyEnv\py38\python.exe  
+│  │  └─ 终端命令示例:  
+│  │     ├─ poetry: "D:\PyEnv\py38\Scripts\poetry.exe" init  
+│  │     ├─ virtualenv: "D:\PyEnv\py38\python.exe" -m virtualenv .venv  
+│  │     ├─ pipenv: "D:\PyEnv\py38\Scripts\pipenv.exe" install requests  
+│  │     ├─ uv: "D:\PyEnv\py38\Scripts\uv.exe" new .venv  
+│  │     └─ hatch: "D:\PyEnv\py38\Scripts\hatch.exe" env create  
+│  │  
+├─ 环境路径（D:\PyEnv\py39\）  
+│  ├─ py39 环境（Python 3.9）  
+│  │  ├─ python.exe: D:\PyEnv\py39\python.exe  
+│  │  ├─ 工具路径: D:\PyEnv\py39\Scripts\  
+│  │  │  ├─ poetry.exe: D:\PyEnv\py39\Scripts\poetry.exe  
+│  │  │  ├─ virtualenv.exe: D:\PyEnv\py39\Scripts\virtualenv.exe  
+│  │  │  ├─ pipenv.exe: D:\PyEnv\py39\Scripts\pipenv.exe  
+│  │  │  ├─ uv.exe: D:\PyEnv\py39\Scripts\uv.exe  
+│  │  │  └─ hatch.exe: D:\PyEnv\py39\Scripts\hatch.exe  
+│  │  ├─ PyCharm解释器路径: D:\PyEnv\py39\python.exe  
+│  │  └─ 终端命令示例:  
+│  │     ├─ poetry: "D:\PyEnv\py39\Scripts\poetry.exe" init  
+│  │     ├─ virtualenv: "D:\PyEnv\py39\python.exe" -m virtualenv .venv  
+│  │     ├─ pipenv: "D:\PyEnv\py39\Scripts\pipenv.exe" install requests  
+│  │     ├─ uv: "D:\PyEnv\py39\Scripts\uv.exe" new .venv  
+│  │     └─ hatch: "D:\PyEnv\py39\Scripts\hatch.exe" env create  
+│  │  
+├─ 环境路径（D:\PyEnv\py310\）  
+│  ├─ py310 环境（Python 3.10）  
+│  │  ├─ python.exe: D:\PyEnv\py310\python.exe  
+│  │  ├─ 工具路径: D:\PyEnv\py310\Scripts\  
+│  │  │  ├─ poetry.exe: D:\PyEnv\py310\Scripts\poetry.exe  
+│  │  │  ├─ virtualenv.exe: D:\PyEnv\py310\Scripts\virtualenv.exe  
+│  │  │  ├─ pipenv.exe: D:\PyEnv\py310\Scripts\pipenv.exe  
+│  │  │  ├─ uv.exe: D:\PyEnv\py310\Scripts\uv.exe  
+│  │  │  └─ hatch.exe: D:\PyEnv\py310\Scripts\hatch.exe  
+│  │  ├─ PyCharm解释器路径: D:\PyEnv\py310\python.exe  
+│  │  └─ 终端命令示例:  
+│  │     ├─ poetry: "D:\PyEnv\py310\Scripts\poetry.exe" init  
+│  │     ├─ virtualenv: "D:\PyEnv\py310\python.exe" -m virtualenv .venv  
+│  │     ├─ pipenv: "D:\PyEnv\py310\Scripts\pipenv.exe" install requests  
+│  │     ├─ uv: "D:\PyEnv\py310\Scripts\uv.exe" new .venv  
+│  │     └─ hatch: "D:\PyEnv\py310\Scripts\hatch.exe" env create  
+│  │  
+├─ 环境路径（D:\PyEnv\py311\）  
+│  ├─ py311 环境（Python 3.11）  
+│  │  ├─ python.exe: D:\PyEnv\py311\python.exe  
+│  │  ├─ 工具路径: D:\PyEnv\py311\Scripts\  
+│  │  │  ├─ poetry.exe: D:\PyEnv\py311\Scripts\poetry.exe  
+│  │  │  ├─ virtualenv.exe: D:\PyEnv\py311\Scripts\virtualenv.exe  
+│  │  │  ├─ pipenv.exe: D:\PyEnv\py311\Scripts\pipenv.exe  
+│  │  │  ├─ uv.exe: D:\PyEnv\py311\Scripts\uv.exe  
+│  │  │  └─ hatch.exe: D:\PyEnv\py311\Scripts\hatch.exe  
+│  │  ├─ PyCharm解释器路径: D:\PyEnv\py311\python.exe  
+│  │  └─ 终端命令示例:  
+│  │     ├─ poetry: "D:\PyEnv\py311\Scripts\poetry.exe" init  
+│  │     ├─ virtualenv: "D:\PyEnv\py311\python.exe" -m virtualenv .venv  
+│  │     ├─ pipenv: "D:\PyEnv\py311\Scripts\pipenv.exe" install requests  
+│  │     ├─ uv: "D:\PyEnv\py311\Scripts\uv.exe" new .venv  
+│  │     └─ hatch: "D:\PyEnv\py311\Scripts\hatch.exe" env create  
+│  │  
+├─ 环境路径（D:\PyEnv\py312\）  
+│  ├─ py312 环境（Python 3.12）  
+│  │  ├─ python.exe: D:\PyEnv\py312\python.exe  
+│  │  ├─ 工具路径: D:\PyEnv\py312\Scripts\  
+│  │  │  ├─ poetry.exe: D:\PyEnv\py312\Scripts\poetry.exe  
+│  │  │  ├─ virtualenv.exe: D:\PyEnv\py312\Scripts\virtualenv.exe  
+│  │  │  ├─ pipenv.exe: D:\PyEnv\py312\Scripts\pipenv.exe  
+│  │  │  ├─ uv.exe: D:\PyEnv\py312\Scripts\uv.exe  
+│  │  │  └─ hatch.exe: D:\PyEnv\py312\Scripts\hatch.exe  
+│  │  ├─ PyCharm解释器路径: D:\PyEnv\py312\python.exe  
+│  │  └─ 终端命令示例:  
+│  │     ├─ poetry: "D:\PyEnv\py312\Scripts\poetry.exe" init  
+│  │     ├─ virtualenv: "D:\PyEnv\py312\python.exe" -m virtualenv .venv  
+│  │     ├─ pipenv: "D:\PyEnv\py312\Scripts\pipenv.exe" install requests  
+│  │     ├─ uv: "D:\PyEnv\py312\Scripts\uv.exe" new .venv  
+│  │     └─ hatch: "D:\PyEnv\py312\Scripts\hatch.exe" env create  
+│  │  
+├─ 环境路径（D:\PyEnv\py313\）  
+│  └─ py313 环境（Python 3.13）  
+│     ├─ python.exe: D:\PyEnv\py313\python.exe  
+│     ├─ 工具路径: D:\PyEnv\py313\Scripts\  
+│     │  ├─ poetry.exe: D:\PyEnv\py313\Scripts\poetry.exe  
+│     │  ├─ virtualenv.exe: D:\PyEnv\py313\Scripts\virtualenv.exe  
+│     │  ├─ pipenv.exe: D:\PyEnv\py313\Scripts\pipenv.exe  
+│     │  ├─ uv.exe: D:\PyEnv\py313\Scripts\uv.exe  
+│     │  └─ hatch.exe: D:\PyEnv\py313\Scripts\hatch.exe  
+│     ├─ PyCharm解释器路径: D:\PyEnv\py313\python.exe  
+│     └─ 终端命令示例:  
+│        ├─ poetry: "D:\PyEnv\py313\Scripts\poetry.exe" init  
+│        ├─ virtualenv: "D:\PyEnv\py313\python.exe" -m virtualenv .venv  
+│        ├─ pipenv: "D:\PyEnv\py313\Scripts\pipenv.exe" install requests  
+│        ├─ uv: "D:\PyEnv\py313\Scripts\uv.exe" new .venv  
+│        └─ hatch: "D:\PyEnv\py313\Scripts\hatch.exe" env create  
+│  
+└─ MSYS2 环境（D:\msys64\mingw64）  
+   └─ Python 3.12 环境（如需）  
+      ├─ python.exe: D:\msys64\mingw64\bin\python.exe  
+      ├─ 工具路径: D:\msys64\mingw64\bin\  
+      │  ├─ poetry.exe: D:\msys64\mingw64\bin\poetry.exe  
+      │  ├─ virtualenv.exe: D:\msys64\mingw64\bin\virtualenv.exe  
+      │  ├─ pipenv.exe: D:\msys64\mingw64\bin\pipenv.exe  
+      │  ├─ uv.exe: D:\msys64\mingw64\bin\uv.exe  
+      │  └─ hatch.exe: 暂未支持 MSYS2 环境  
+      ├─ PyCharm解释器路径: D:\msys64\mingw64\bin\python.exe  
+      └─ 终端命令示例:  
+         ├─ poetry: "D:\msys64\mingw64\bin\poetry.exe" init  
+         ├─ virtualenv: "D:\msys64\mingw64\bin\python.exe" -m virtualenv .venv  
+         ├─ pipenv: "D:\msys64\mingw64\bin\pipenv.exe" install requests  
+         ├─ uv: "D:\msys64\mingw64\bin\uv.exe" new .venv  
+         └─ hatch: 暂未支持 MSYS2 环境  
+````
+
+---
+
+## 🧰 构建工具安装推荐
+
+在每个 Conda Python 主版本环境中，推荐统一安装以下工具链（可任选组合使用）：
+
+```powershell
+pip install poetry virtualenv pipenv uv hatch
 ```
 
+| 工具           | 说明                |
+| ------------ | ----------------- |
+| `poetry`     | 项目元数据 + 依赖管理 + 构建 |
+| `pipenv`     | `Pipfile` 驱动的依赖管理 |
+| `virtualenv` | 手动创建虚拟环境          |
+| `uv`         | ultrafast pip 替代  |
+| `hatch`      | 构建/打包/环境管理工具      |
+
 ---
 
-## 五、可迁移性与复现能力
+## 🧭 `.venv` 构建与复现逻辑说明
 
-### 迁移到新环境的步骤  
-1. 复制项目目录到新机器  
-2. 激活 .venv 环境：  
-   ```bash
-   cd myproject
-   .\.venv\Scripts\activate
-   ```  
-3. 直接使用本地工具运行：  
-   ```bash
-   poetry install  # 或 uv sync
-   ```
-
-### 环境重建方案  
-若 .venv 丢失，可通过依赖文件快速恢复：  
-```bash
-python -m venv .venv  # 重建虚拟环境
-.\.venv\Scripts\activate
-pip install -r requirements.txt  # 安装锁定的工具版本
+```text
+conda (隔离构建工具环境)
+  └── poetry / uv / hatch（仅用来构建虚拟环境）
+         └── 项目目录（含 .venv）
+                └── pip install -r requirements.txt
 ```
 
----
-
-## 六、小结
-
-双层隔离策略通过“Conda 引导 + .venv 本地化”，实现了：  
-- 工具版本的精准控制  
-- 项目环境的完全自包含  
-- 跨机器的无缝迁移  
-
-这一策略是“三维治理”中“构建治理”的核心实践，为多项目并行开发提供了稳定保障。
+* 工具链版本可以随 Conda 环境升级而升级，不影响项目；
+* 构建出的 `.venv` 中 **不包含**这些工具；
+* `.venv` 只用于运行项目代码，不承担构建职责。
 
 ---
 
-### 推荐阅读  
-- [三维治理理念原文](https://aicity.blog.csdn.net/article/details/149055334)  
-- [Anaconda 多版本策略](./03-Anaconda多版本策略.md)  
-- [路径结构规范](./02-路径结构规范.md)
+## ⚠️ 注意事项
+
+| 场景               | 推荐做法                                                 |
+| ---------------- | ---------------------------------------------------- |
+| 更换 Conda 工具链环境版本 | 删除旧工具链环境，重建新的 Conda 环境                               |
+| `.venv` 迁移到新机器   | 拷贝 `.venv` 后重新运行 `poetry install` 或 `uv pip install` |
+| 避免 PATH 冲突       | Conda 工具不加入系统 PATH，显式调用 `D:\Conda\Scripts\` 工具       |
+
+---
+
+## ✅ 总结
+
+通过将工具链安装到 Conda 的特定版本环境中，并将项目运行环境构建为本地 `.venv`，可以实现：
+
+* 构建与运行分离；
+* 工具链版本可控；
+* 项目迁移零依赖；
+* 环境治理更加可维护、可审计。
+
+这种「三层隔离 + 构建即消失」的理念，是打造现代化 Python 多项目管理体系的关键。
+
+---
+
+## 📚 延伸阅读
+
+* [01 · 理念概述：三维治理、四级隔离、五项自治](./01-理念概述.md)
+* [03 · 多版本策略：通过 Conda 管理多个 Python 主版本](./03-Anaconda多版本策略.md)
+* [05 · 项目本地环境实践：.venv 构建、迁移、复现全流程](./05-项目本地环境实践.md)
