--- a/docs/05-模板设计与迁移复现.md
+++ b/docs/05-模板设计与迁移复现.md
@@ -1,149 +1,165 @@
-# 05 · 模板设计与迁移复现：打造可复制的 AI 项目开发结构
+# 05 · 模板设计与迁移复现：打造可复制的项目开发结构
 
-> 本章总结如何通过统一项目模板与环境结构，实现 `.venv`、Docker、WSL 的可迁移与复现，确保项目快速部署、教学分发、团队协作的稳定性与高效性。
-
----
-
-## 🎯 核心目标
-
-1. 统一路径结构 → 保证文件可预期定位
-2. 封装环境依赖 → 保证跨平台部署一致性
-3. 构建模板体系 → 快速初始化新项目
-4. 支持迁移复现 → 项目可复制、可快照、可部署
+> 本文作为治理方案的收官章节，总结如何通过统一项目结构与 `.venv` 环境封装，实现项目快速初始化、教学分发与跨设备复现。配合 Conda 多版本与工具链隔离体系，构建“即拿即用、即部署即运行”的 AI 本地开发模式。
 
 ---
 
-## 📁 标准项目结构模板示例
+## 🎯 目标与核心价值
 
-以一个深度学习项目为例：
+| 目标场景       | 解决痛点                               |
+|------------|------------------------------------|
+| 项目初始化     | 环境构建步骤繁琐，依赖版本易错                |
+| 教学环境分发   | 学员系统差异大，部署过程复杂，难以统一教学进度       |
+| 跨机部署迁移   | 项目迁移后依赖丢失，构建工具不兼容，项目不可运行       |
+| 团队协作       | 新成员加入成本高，环境不一致，协作难以对齐          |
 
-```text
-I:\DevProjects\MyAIProject\
-├── .venv\                    ← 项目专属虚拟环境（包含构建工具）
-│   └── Scripts/poetry.exe    ← 项目内封装的构建工具
-├── data\                     ← 原始数据或中间数据
-├── models\                   ← 模型保存目录
-├── notebooks\                ← Jupyter / 实验记录
-├── scripts\                  ← 各类训练、推理、预处理脚本
+✅ 通过统一的项目模板与 `.venv` 本地化虚拟环境设计，确保开发、运行、部署的一致性与复现性。
+
+---
+
+## 📁 推荐项目结构模板
+
+以典型 AI 项目为例：
+
+```
+
+I:\DevProjects\MyAIProject
+├── .venv\                ← 本地虚拟环境，包含所有依赖和构建工具
+├── data\                 ← 原始数据或预处理结果
+├── models\               ← 模型保存目录
+├── notebooks\            ← Jupyter 实验记录
+├── scripts\              ← 各类训练/推理/评估脚本
 ├── README.md
-├── pyproject.toml            ← 构建依赖配置（Poetry / Hatch）
-├── requirements.txt
-└── .env                      ← 项目环境变量配置
+├── pyproject.toml        ← 依赖配置（poetry/hatch 管理）
+├── requirements.txt      ← 依赖快照（兼容 pip 安装）
+└── .env                  ← 项目私有配置
+
 ````
 
----
-
-## ⚙ 本地开发环境组件集成
-
-| 组件     | 示例                     | 说明                       |
-| ------ | ---------------------- | ------------------------ |
-| Python | 3.9 / 3.10 / 3.11      | Conda 管理，配合项目 `.venv` 创建 |
-| 构建工具   | Poetry / uv / Hatch    | 安装在 `.venv` 中，版本锁定       |
-| 容器工具   | Docker / Podman        | 镜像迁移 + 卷目录挂载             |
-| 子系统    | WSL2 (Fedora / Ubuntu) | 可导出 `.tar` 快照进行复现        |
+> 🌟 所有依赖都应写入 `pyproject.toml` 或 `requirements.txt` 中，并在 `.venv` 内安装，确保项目完全自包含。
 
 ---
 
-## 🧰 迁移与复现策略一览
+## 🛠 初始化方式（推荐标准流程）
 
-| 对象           | 导出方式                   | 导入方式                   |
-| ------------ | ---------------------- | ---------------------- |
-| `.venv` 虚拟环境 | 直接复制或打包为 `.zip`        | 解压后即可使用，无需重新创建         |
-| Conda 环境     | `conda env export`     | `conda env create`     |
-| WSL 子系统      | `wsl --export`         | `wsl --import`         |
-| Docker 镜像与卷  | `docker save` / 符号链接迁移 | `docker load` / 映射原始路径 |
-
----
-
-## 🧪 示例：使用 PowerShell 快速迁移项目环境
+### 手动初始化流程（首次构建）
 
 ```powershell
-# 导出当前 Conda 环境列表
-.\tools\export_conda_envs.ps1
+# Step 1：激活 Conda 中的工具链环境（如 py310）
+D:\Conda\Scripts\activate.bat D:\PyEnv\py310
 
-# 打包当前项目（含 .venv）
-Compress-Archive -Path .\* -DestinationPath ..\MyAIProject.zip
+# Step 2：进入目标项目路径
+cd I:\DevProjects\MyAIProject
 
-# 导出 WSL 子系统
-wsl --export podman-machine-default I:\WSL_Backups\podman.tar
-```
+# Step 3：创建本地虚拟环境并安装构建工具
+uv venv .venv
+.venv\Scripts\pip install poetry
 
----
+# Step 4：初始化项目依赖
+poetry init  # 或手动写 pyproject.toml
+poetry install
+````
 
-## 🐳 Docker 镜像与卷迁移实践
-
-详见：[路径治理篇 · 配置 Docker 镜像与卷路径](https://aicity.blog.csdn.net/article/details/149172789)
-
-核心操作：使用 PowerShell 符号链接静默迁移镜像路径，避免 Docker Desktop 手动修改导致异常。
-
-```powershell
-# 示例：迁移 Docker 镜像存储路径
-Stop-Process -Name "Docker Desktop" -Force
-Move-Item "C:\ProgramData\Docker" "I:\DockerData"
-New-Item -ItemType SymbolicLink -Path "C:\ProgramData\Docker" -Target "I:\DockerData"
-Start-Process "Docker Desktop"
-```
-
----
-
-## ✨ 项目模板初始化脚本建议
-
-创建如 `init_project.ps1` 脚本自动生成结构：
+### 自动化初始化脚本（建议教学/企业部署使用）
 
 ```powershell
+# init_project.ps1
 param(
-    [string]$ProjectName = "MyNewProject"
+    [string]$ProjectName = "MyAIProject"
 )
-
 $base = "I:\DevProjects\$ProjectName"
-New-Item -ItemType Directory -Path $base
-New-Item -ItemType Directory -Path "$base\data", "$base\models", "$base\scripts", "$base\notebooks"
-python -m venv "$base\.venv"
+New-Item -ItemType Directory -Path "$base\data","$base\models","$base\notebooks","$base\scripts"
 New-Item "$base\README.md" -ItemType File
-Start-Process "code" $base
+cd $base
+uv venv .venv
+.venv\Scripts\pip install poetry
+Start-Process code $base
 ```
 
 ---
 
-## 🖼 Mermaid 图建议：开发环境快照迁移流程图
+## 📦 `.venv` 迁移与复现策略
 
-```mermaid
-flowchart TD
-    A[项目开发完成] --> B[导出 .venv]
-    B --> C[导出 Conda 环境]
-    C --> D[导出 Docker 镜像]
-    D --> E[导出 WSL 子系统]
-    E --> F[压缩打包 + README 配置]
-    F --> G[新设备快速部署复现]
+### 方式一：打包 `.venv`（推荐）
+
+```powershell
+Compress-Archive -Path .\.venv -DestinationPath .venv.zip
+# 传输到新设备后解压即可使用（无需重新 install）
 ```
 
+> 注意保持路径结构一致，推荐同样使用 `I:\DevProjects\...` 格式部署。
+
+### 方式二：依赖快照恢复（用于精简分发）
+
+```powershell
+# 导出依赖
+.venv\Scripts\pip freeze > requirements.txt
+
+# 新设备上
+uv venv .venv
+.venv\Scripts\pip install -r requirements.txt
+```
+
+> 构建工具（如 poetry/uv）建议同时在 `.venv` 中再装一次，以便完全复现使用体验。
+
 ---
 
-## 🧩 可作为教学分发模板的优势
+## 🔁 跨平台复现建议
 
-* 新学员快速部署、零基础入门
-* 项目一键构建，无需安装额外工具
-* `.venv` 已含所有依赖，稳定复现
-* 支持版本封装（Python、CUDA、库等）
+| 对象类型         | 复现方式                           | 工具         |
+| ------------ | ------------------------------ | ---------- |
+| Python 环境版本  | 使用 Conda 多版本结构复现               | conda      |
+| 构建工具链        | 在 `.venv` 中再安装 poetry/uv/hatch | pip/uv     |
+| 虚拟环境 `.venv` | 打包压缩再解压，或依赖文件 install          | uv/pip     |
+| 路径结构         | 保持一致的目录层级结构（如 I:\DevProjects）  | 手动管理或初始化脚本 |
 
 ---
 
-## 📚 延伸阅读与参考
+## 🧪 教学场景下的部署建议
 
-* [路径治理篇：打造可控、可迁移、可复现的 AI 开发路径结构](https://aicity.blog.csdn.net/article/details/149172789)
-* [三维治理理念原文](https://aicity.blog.csdn.net/article/details/149055334)
-* [模板部署与分发建议](https://aicity.blog.csdn.net/article/details/148982624)
+* 教学机应预装：
+
+  * `D:\Conda` 多版本环境（3.8–3.13）
+  * `D:\PyEnv\` 工具链环境
+  * VSCode + PowerShell + Typora + Git
+
+* 分发时提供：
+
+  * `.venv.zip`（或 requirements.txt）
+  * 配套项目源代码
+  * `init_project.ps1` 初始化脚本
+
+---
+
+## ⚠️ 注意事项与排查建议
+
+| 问题场景                | 原因分析               | 解决建议                                       |
+| ------------------- | ------------------ | ------------------------------------------ |
+| `.venv` 启动失败        | 依赖不兼容、Python 版本不符  | 确保目标机器 Conda 中存在相同版本解释器                    |
+| 工具链命令找不到            | 构建工具未在 `.venv` 内安装 | 进入 `.venv` 后重新 `pip install poetry`        |
+| 克隆后运行失败             | 缺少 .env 或路径结构不一致   | 提前在模板中说明结构要求或配套 `.env.example`             |
+| VSCode 无法识别 `.venv` | 未设置 Python 解释器路径   | Ctrl+Shift+P 选择 `.venv\Scripts\python.exe` |
 
 ---
 
 ## ✅ 总结
 
-统一的模板结构与环境封装机制，是项目治理的重要一环：
+统一结构、隔离工具、封装依赖，是实现环境可复制的关键路径：
 
-* 保证路径结构可控
-* 提升迁移部署效率
-* 降低团队协作门槛
-* 强化教学与演示复现能力
+* ✅ `.venv` 是项目环境的最低交付单元，需本地化封装；
+* ✅ 构建工具只在 `.venv` 运行时使用，避免系统污染；
+* ✅ 路径结构必须统一，助力跨设备迁移与教学场景部署；
+* ✅ 脚本化项目模板，可一键生成完整目录与环境。
 
-**治理不是约束，而是提升开发自由度的前提！**
+> **治理不是束缚，而是提升自由度的前提。**
+> 越是标准化的流程，越能专注于项目本身的创造。
+
+---
+
+## 📚 延伸阅读
+
+* [01 · 理念概述](./01-理念概述.md)
+* [02 · 路径结构规范](./02-路径结构规范.md)
+* [03 · Anaconda 多版本策略](./03-Anaconda多版本策略.md)
+* [04 · 工具链隔离](./04-工具链隔离.md)
 
